# pylibcamera

./: .gitignore  clone-libcamera.sh  fix_libcamera.patch  fix_libcamera_again5.patch  meson.build  meson_options.txt  pyproject.toml
subprojects/: libcamera.wrap
