# SPDX-License-Identifier: CC0-1.0

# option('repository',
#        type : 'string',
#        value : 'https://git.libcamera.org/libcamera/libcamera.git',
#        description : 'Base repository to build from')

option('repository',
        type : 'string',
        value : 'https://github.com/raspberrypi/libcamera.git',
        description : 'Base repository to build from')

option('revision',
        type : 'string',
        # value : 'master',
        value: 'v0.5.0+rpt20250429',
        description : 'Git revision to checkout')

option('version',
        type : 'string',
        value : 'unknown',
        # value: 'v0.5.0+59-d83ff0a4',
        description : 'libcamera version')

option('patch',
        type : 'string',
        value : 'fix_libcamera_again5',
        description : 'Patch to apply')

option('pycamera',
        type : 'feature',
        value : 'enabled',
        description : 'Enable libcamera Python bindings - must be enabled')