# SPDX-License-Identifier: CC0-1.0

# option('repository',
#        type : 'string',
#        value : 'https://git.libcamera.org/libcamera/libcamera.git',
#        description : 'Base repository to build from')

option('repository',
        type : 'string',
        value : 'https://github.com/Brishen/libcamera.git',
        description : 'Base repository to build from')

option('revision',
        type : 'string',
        value : 'main',
        value: 'main',
        description : 'Git revision to checkout')

option('version',
        type : 'string',
        value : 'unknown',
#        value: 'v0.5.1',
        description : 'libcamera version')

#option('patch',
#        type : 'string',
#        value : 'fix_libcamera_again5',
#        description : 'Patch to apply')

option('pycamera',
        type : 'feature',
        value : 'enabled',
        description : 'Enable libcamera Python bindings - must be enabled')