[build-system]
build-backend = 'mesonpy'
requires = ['meson-python', 'pyyaml', 'pybind11', 'jinja2', 'ply']

[project]
name = 'rpi-libcamera'
version = '0.1a10'
description = 'libcamera python bindings'
readme = 'README.md'
dependencies = [
    "meson>=1.8.2",
]

[project.urls]
Source = "https://github.com/raspberrypi/pylibcamera"
"RPi libcamera Source" = "https://github.com/raspberrypi/libcamera"

[tool.meson-python.args]
setup = [
    '-Drevision=v0.5.0+rpt20250429',
    '-Drepository=https://github.com/raspberrypi/libcamera.git',
    '-Dversion=v0.5.0+59-d83ff0a4',
    '-Dpatch=fix_libcamera_again5'
]

[tool.flit.module]
name = "libcamera"
